BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/User_Created_Alignment__c.object
<CustomObject>
    <description>This object will store alignments created by users from front end, via global account search and creation of a non - prescriber</description>
    <fields>
        <fullName>Account_Terr_ExternalID__c</fullName>
        <description>An external ID field to prevent duplicates. It is a combination of the account ID and the territory name.</description>
        <externalId>true</externalId>
        <label>Account_Terr_ExternalID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_BP_id_BMS_c__c</fullName>
        <description>To Store Account which was aligned to territory.</description>
        <inlineHelpText>To Store Account which was aligned to territory.</inlineHelpText>
        <label>Customer_BP_id_BMS__c</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_BMS_C__c</fullName>
        <description>Status of record</description>
        <inlineHelpText>Status of record</inlineHelpText>
        <label>Status_BMS__C</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory_vod_c__c</fullName>
        <description>To Store territory which was aligned to Account.</description>
        <inlineHelpText>To Store territory which was aligned to Account.</inlineHelpText>
        <label>Territory_vod__c</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>User Created Alignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>User Created Alignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Created Alignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>